src/test/resources/repos/invalid-binary-desc-subjects/daa/b38/aaf/daab38aaf09161bfb363c09076024a4d0a981173c39d03d3c77ab2f2f62e6414/v4/inventory.json.sha512
5bdcb3e282f377e812e483e22b7ce6dfc972e8f63ff23520e5dbcbd278131a9405d37f6bba29bc7b74171172a662085405ebca7aa1b4058f99b0cbf50707dd40	inventory.json